infrastructures/OCI/k8s/velero/velero-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: velero-ui
  namespace: velero
  labels:
    app: velero-ui
spec:
  type: ClusterIP
  selector:
    app: velero-ui
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
