infrastructures/OCI/k8s/velero/velero-ui-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: velero-ui-https
  namespace: velero
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`velero.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: velero-ui
          port: 80
      middlewares:
        - name: google-auth
          namespace: traefik
